# KonkoAI_Assessment

./: .gitignore  README.md  pyproject.toml  setup.py
src/konko_ai_chat/: __init__.py
src/konko_ai_chat/api/: app.py  rate_limiter.py  request_queue.py
src/konko_ai_chat/domain/: models.py
src/konko_ai_chat/repositories/: base.py  memory.py
src/konko_ai_chat/services/: llm.py
tests/: test_api.py  test_complex_math.py  test_concurrency.py  test_performance.py
